[metadata]
name = gitsiphon
version = 2.0.0
author = GitSiphon Team
license = MIT
description = Advanced high-performance git repository dumper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arthaud/gitsiphon
keywords = dump, git, repository, security, vulnerability, ctf, async
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Security

[options]
py_modules = gitsiphon
python_requires = >=3.9
install_requires =
    aiohttp
    beautifulsoup4
    pysocks
    rich

[options.entry_points]
console_scripts =
    gitsiphon = gitsiphon:main
